added some files

--- a/src/app/brands/brands.component.html
+++ b/src/app/brands/brands.component.html
@@ -7,39 +7,51 @@
               <!-- single-brand -->
               <div class="single-brand-item d-table">
                 <div class="d-table-cell">
-                  <img src="assets/img/brands/logo1.png" alt="">
+                  <img src="assets\img\skill_Icon\aspmvc.png" alt="">
                 </div>
               </div>
               <!-- single-brand -->
               <div class="single-brand-item d-table">
                 <div class="d-table-cell">
-                  <img src="assets/img/brands/logo2.png" alt="">
+                  <img src="assets\img\skill_Icon\csharp.png" alt="">
                 </div>
               </div>
               <!-- single-brand -->
               <div class="single-brand-item d-table">
                 <div class="d-table-cell">
-                  <img src="assets/img/brands/logo3.png" alt="">
+                  <img src="assets\img\skill_Icon\asp-net.png" alt="">
                 </div>
               </div>
               <!-- single-brand -->
               <div class="single-brand-item d-table">
                 <div class="d-table-cell">
-                  <img src="assets/img/brands/logo4.png" alt="">
+                  <img src="assets\img\skill_Icon\microsoft-sql-server.svg" alt="">
                 </div>
               </div>
               <!-- single-brand -->
               <div class="single-brand-item d-table">
                 <div class="d-table-cell">
-                  <img src="assets/img/brands/logo5.png" alt="">
+                  <img src="http://www.webcoderskull.com/img/icon/wp.svg" alt="">
                 </div>
               </div>
               <!-- single-brand -->
               <div class="single-brand-item d-table">
                 <div class="d-table-cell">
-                  <img src="assets/img/brands/logo3.png" alt="">
+                  <img src="assets\img\skill_Icon\php.png" alt="">
                 </div>
               </div>
+               <!-- single-brand -->
+               <div class="single-brand-item d-table">
+                  <div class="d-table-cell">
+                    <img src="assets\img\skill_Icon\GitHub.png" alt="">
+                  </div>
+                </div>
+                 <!-- single-brand -->
+              <div class="single-brand-item d-table">
+                  <div class="d-table-cell">
+                    <img src="assets\img\skill_Icon\jira.png" alt="">
+                  </div>
+                </div>
             </div>
           </div>
         </div>
