--- a/src/app/homepagefooter/homepagefooter.component.html
+++ b/src/app/homepagefooter/homepagefooter.component.html
@@ -12,11 +12,11 @@
                 <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
                   <div class="collapse navbar-collapse offset">
                     <ul class="nav navbar-nav menu_nav mx-auto">
-                      <li class="nav-item"><a class="nav-link text-white" roterLink="/home">Home</a></li>
-                      <li class="nav-item"><a class="nav-link text-white" roterLink="/about">About</a></li>
-                      <li class="nav-item"><a class="nav-link text-white" roterLink="/portfolio">Portfolio</a></li>
-                      <li class="nav-item"><a class="nav-link text-white" roterLink="/blog">BLog</a></li>
-                      <li class="nav-item"><a class="nav-link text-white" roterLink="/services">Services </a></li>
+                      <li class="nav-item"><a class="nav-link text-white" routerLink="/home" >Home</a></li>
+                      <li class="nav-item"><a class="nav-link text-white" routerLink="/about">About</a></li>
+                      <li class="nav-item"><a class="nav-link text-white" routerLink="/portfolio">Portfolio</a></li>
+                      <li class="nav-item"><a class="nav-link text-white" routerLink="/blog">BLog</a></li>
+                      <li class="nav-item"><a class="nav-link text-white" routerLink="/services">Services </a></li>
                     </ul>
                   </div>
                 </nav>
