--- a/src/app/homepageheader/homepageheader.component.html
+++ b/src/app/homepageheader/homepageheader.component.html
@@ -5,7 +5,7 @@
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
           <a class="navbar-brand logo_h" routerLink="/home"><img src="assets/img/logo.png" alt=""></a>
-					<a class="navbar-brand logo_inner_page" roterLink="/home"><img src="assets/img/logo2.png" alt=""></a>      
+					<a class="navbar-brand logo_inner_page" roterLink="/home"><img style="width:75px;" src="assets/img/logo2.png" alt=""></a>      
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
